# big-thing-py-examples

./: LICENSE  README.md
big_thing/TTS_big_thing/: README.md  requirements.txt  run.py  test_audio_lib.py
big_thing/all_in_one_thing/: all_in_on_thing.py
big_thing/basic_feature_big_thing/: README.md  run.py
big_thing/camera_big_thing/: README.md  camera_capture_test.py  requirements.txt  run.py
big_thing/camera_speaker_big_thing/: README.md  requirements.txt  run.py
big_thing/clock_big_thing/: README.md  run.py
big_thing/email_big_thing/: README.md  run.py
big_thing/google_big_thing/: run.py
big_thing/human_detector_big_thing/: CMakeLists.txt  README.md  human_detector.h  human_detector_thing.cc  run.py
big_thing/human_detector_thing/: backend_run.sh  detectnet_cus.py  human_detector.cc  human_detector_thing_example.py  preinstall.sh
big_thing/kakao_big_thing/: README.md  run.py
big_thing/menu_parser_big_thing/: .gitignore  README.md  package-lock.json  package.json  parse.js  preinstall.sh  requirements.txt  run.py
big_thing/naver_big_thing/: README.md  requirements.txt  run.py
big_thing/object_detector_big_thing/: README.md  run.py
big_thing/object_detector_thing/: object_detector_video.py  preinstall.sh
big_thing/sensor_box_big_thing/: README.md  requirements.txt  run.py
big_thing/sensor_box_thing/: sensor_box_thing.py
big_thing/simple_big_thing/: run.py
big_thing/timelapse_big_thing/: .gitignore  README.md  run.py  timelapse_utils.py
big_thing/timer_big_thing/: README.md  (+1 more)
super_thing/: service_list.json  super_thing_example.py
(+28 files in other folders)
